--- a/index.html
+++ b/index.html
@@ -17,99 +17,180 @@
     <!-- header -->
       <div class="page-header">
         <div class="row">
-          <div class="col-md-2 bio-pic">
+          <div class="col-sm-2 bio-pic">
             <img class="img-responsive header-image" src="images/bio-pic.jpg" alt="photo">
           </div>
-          <div class="col-md-4 name">
+          <div class="col-sm-4 name">
             James Turello
           </div>
-          <div class="col-md-6 job-title">
+          <div class="col-sm-6 job-title">
             <p>QA Engineer / Developer in Training</p>
           </div>
         </div>
       </div>
-    <!-- end page-header -->
+      <!-- end page-header -->
 
-    <!-- page body content -->
-    <div class="row body-content">
-      <!-- work experience -->
-      <div class="col-md-6 work-experience">
-        <h3>Work Experience:</h3>
-        <p>I have over 25 years of experience working in software development mainly as a quality assurance engineer with some experience as a business analyst as well. For the majority of that time I tested on property casualty and life insurance as well as healthcare related systems.
-        <div class="row">
-          <div class="col-md-8 employer-header">
-            Employers:
+
+      <!-- page body content -->
+      <div class="row aboutme">
+
+        <!-- About Me -->
+        <div class="col-sm-12">
+          About Me:
+        </div>
+      </div>
+      <div class="row">
+
+        <!-- work experience -->
+        <div class="col-sm-6 work-experience">
+          <h3>Work Experience:</h3>
+          <p>I have over 25 years of experience working in software development mainly as a quality assurance engineer with some experience as a business analyst as well. For the majority of that time I tested on property casualty and life insurance as well as healthcare related systems.
+          <div class="row">
+            <div class="col-sm-8 aboutme-sub-subheader">
+              Employers:
+            </div>
+            <div class="col-sm-4 aboutme-sub-subheader">
+              Employment Start:
+            </div>
           </div>
-          <div class="col-md-4 employment-start-date-header">
-            Employment Start
+          <div class="row">
+            <div class="col-sm-8 employer">
+              DiscoverOrg
+            </div>
+            <div class="col-sm-4 employment-start-date">
+              Feb. 2014
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 employer">
+              Nike
+            </div>
+            <div class="col-sm-4 employment-start-date">
+              Dec. 2012
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 employer">
+              Kinnser Software
+            </div>
+            <div class="col-sm-4 employment-start-date">
+              May 2010
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 employer">
+              Texas Windstorm Insurance Association
+            </div>
+            <div class="col-sm-4 employment-start-date">
+              Jan. 2008
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 employer">
+              Computer Sciences Corp.
+            </div>
+            <div class="col-sm-4 employment-start-date">
+              May 1997
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 employer">
+              Electronic Data Systems (EDS)
+            </div>
+            <div class="col-sm-4 employment-start-date">
+              Aug. 1990
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-8 employer">
-            DiscoverOrg
+        <!-- end work experience -->
+
+        <!-- Education -->
+        <div class="col-sm-6 education">
+          <h3>Education:</h3>
+          <p>I have a bachelors of arts degree plus technical coursework undertaken after graduating from college.
+
+          <!-- training -->
+          <div class="row">
+            <div class="col-sm-8 aboutme-sub-subheader">
+              Training:
+            </div>
+            <div class="col-sm-4 aboutme-sub-subheader">
+              Training Date:
+            </div>
           </div>
-          <div class="col-md-4 employment-start-date">
-            Feb. 2014
+          <div class="row">
+            <div class="col-sm-8 training">
+              University of Texas at Austin, BA in Spanish
+            </div>
+            <div class="col-sm-4 training-date">
+              1985
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 training">
+              C++ Programming (3 courses)
+            </div>
+            <div class="col-sm-4 training-date">
+              2002
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 training">
+              Java Programming (2 courses)
+            </div>
+            <div class="col-sm-4 training-date">
+              2003
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 training">
+              SQL and PL/SQL
+            </div>
+            <div class="col-sm-4 training-date">
+              2002
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 training">
+              Intro to C# Programming
+            </div>
+            <div class="col-sm-4 training-date">
+              2007
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 training">
+              Guidewire BillingCenter Configuration Mgnt Training
+            </div>
+            <div class="col-sm-4 training-date">
+              2009
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 training">
+              Ruby on Rails v.3.0.9 (self study) - Ruby on Rails Tutorial (Michael Hartl)
+            </div>
+            <div class="col-sm-4 training-date">
+              2011
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 training">
+              Scrum Master Certification (Mike Cohn)
+            </div>
+            <div class="col-sm-4 training-date">
+              2012
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-8 employer">
-            Nike
-          </div>
-          <div class="col-md-4 employment-start-date">
-            Dec. 2012
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 employer">
-            Kinnser Software
-          </div>
-          <div class="col-md-4 employment-start-date">
-            May 2010
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 employer">
-            Texas Windstorm Insurance Association
-          </div>
-          <div class="col-md-4 employment-start-date">
-            Jan. 2008
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 employer">
-            Computer Sciences Corp.
-          </div>
-          <div class="col-md-4 employment-start-date">
-            May 1997
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 employer">
-            Electronic Data Systems (EDS)
-          </div>
-          <div class="col-md-4 employment-start-date">
-            Aug. 1990
-          </div>
-        </div>
-
-
-      <!-- end work experience -->
-
-        </div>
-      <div class="col-md-6 education">
-        <h3> Education:</h3>
-        <p>
-    </div>
-
-
-
-
-
       </div>
     </div>
+    <!-- end body container -->
 
-    <!-- About Me -->
+
+    </div>
+
+
 
 
 
