add current interests and projects headers

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="row">
 
         <!-- work experience -->
-        <div class="col-sm-6 work-experience">
+        <div class="col-sm-6 aboutme-header">
           <h3>Work Experience:</h3>
           <p>I have over 25 years of experience working in software development mainly as a quality assurance engineer with some experience as a business analyst as well. For the majority of that time I tested on property casualty and life insurance as well as healthcare related systems.
           <div class="row">
@@ -105,7 +105,7 @@
         <!-- end work experience -->
 
         <!-- Education -->
-        <div class="col-sm-6 education">
+        <div class="col-sm-6 aboutme-header">
           <h3>Education:</h3>
           <p>I have a bachelors of arts degree plus technical coursework undertaken after graduating from college.
 
@@ -184,11 +184,26 @@
           </div>
         </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-sm-12 aboutme-header">
+          <h3>Current Interests:</h3>
+        </div>
+      </div>
+
+
+
+      <div class="row">
+        <div class="col-sm-12 aboutme-header">
+          <h3>Projects:</h3>
+        </div>
+      </div>
+
+
+
     <!-- end body container -->
 
 
-    </div>
+
 
 
 
