create README.md for the project

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="row">
 
         <!-- work experience -->
-        <div class="col-sm-6 aboutme-header">
+        <div class="col-sm-6 aboutme-header work-experience">
           <h3>Work Experience:</h3>
           <p>I have over 25 years of experience working in software development mainly as a quality assurance engineer with some experience as a business analyst as well. For the majority of that time I tested on property casualty and life insurance as well as healthcare related systems.
           <div class="row">
